--- a/elide-standalone/pom.xml
+++ b/elide-standalone/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>com.yahoo.elide</groupId>
         <artifactId>elide-parent-pom</artifactId>
-        <version>4.3.2-SNAPSHOT</version>
+        <version>4.3.2</version>
     </parent>
 
     <licenses>
@@ -63,12 +63,12 @@
         <dependency>
             <groupId>com.yahoo.elide</groupId>
             <artifactId>elide-datastore-hibernate5</artifactId>
-            <version>4.3.2-SNAPSHOT</version>
+            <version>4.3.2</version>
         </dependency>
         <dependency>
             <groupId>com.yahoo.elide</groupId>
             <artifactId>elide-graphql</artifactId>
-            <version>4.3.2-SNAPSHOT</version>
+            <version>4.3.2</version>
         </dependency>
 
         <!-- MySQL Driver -->
@@ -195,4 +195,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>bintray</id>
+            <name>Yahoo bintray repo</name>
+            <url>https://yahoo.bintray.com/maven</url>
+        </repository>
+    </repositories>
 </project>
